--- a/.travis.yml
+++ b/.travis.yml
@@ -7,14 +7,18 @@ python:
 cache:
   - pip
   - apt
+before_install:
+  - pip install --upgrade pip
+  - pip install poetry
+  - which poetry
+  - poetry --version
 install:
-  - pip install pipenv
-  - pipenv install --dev --deploy
-  - pipenv graph
+  - poetry install -vv --all-extras --no-interaction
+  - poetry show -vv
 script:
-  - pipenv run py.test -vv --cov=gen3config --cov-report xml tests
+  - poetry run pytest -vv --cov=gen3config --cov-report xml tests
 after_script:
-  - pipenv run python-codacy-coverage -r coverage.xml
+  - poetry run python-codacy-coverage -r coverage.xml
 before_deploy:
   - sed -i.bak "s/=get_version()/='$TRAVIS_TAG'/g" setup.py
   - cat setup.py
