--- a/.github/workflows/pypi.yaml
+++ b/.github/workflows/pypi.yaml
@@ -9,8 +9,7 @@ jobs:
     uses: uc-cdis/.github/.github/workflows/python_package_index_publish.yaml@master
     with:
         PYTHON_VERSION: '3.9'
-        # the package was registered under someone's personal test-pypi account, so we
-        # can't push there
+        # This will attempt push to test PyPI first and only push to prod if it works
         DO_TEST_PUBLISH_FIRST: true
     secrets:
       PYPI_TEST_API_TOKEN: ${{ secrets.PYPI_TEST_API_TOKEN }}
